[package]
name    = "fl-staking-pool"
version = "1.0.0"
edition = "2021"
description = "Final Layer staking pool — delegated staking with deposit + claim fees and 48h lockup"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk  = { version = "5.1", features = ["legacy"] }
bs58      = { version = "0.5", default-features = false, features = ["alloc"] }

[profile.release]
codegen-units   = 1
opt-level       = "z"
lto             = true
debug           = false
panic           = "abort"
overflow-checks = true
